fix(app layout): fix mobile layout issues, font

--- a/astro_2.0/components/AppHeader/components/AccountDropdown/components/ConnectedAccountButton/ConnectedAccountButton.module.scss
+++ b/astro_2.0/components/AppHeader/components/AccountDropdown/components/ConnectedAccountButton/ConnectedAccountButton.module.scss
@@ -12,6 +12,8 @@
   white-space: nowrap;
 
   @include mobile-only {
+    min-width: unset;
+
     .accountId {
       display: none;
     }
